preparation-for-demo/01_mock-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-ui
  namespace: mock-system
  labels:
    app: mock-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-ui
  template:
    metadata:
      labels:
        app: mock-ui
    spec:
      containers:
      - name: mock-frontend
        image: ytsuboi/mockui:vmworld2020
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mock-ui
  namespace: mock-system
  labels:
    app: mock-ui
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: mock-ui
